--- a/CS/App.config
+++ b/CS/App.config
@@ -26,7 +26,7 @@
   <userSettings>
     <DXThemeManager>
       <setting name="ApplicationThemeName" serializeAs="String">
-        <value>Office2019White</value>
+        <value>Office2019Colorful</value>
       </setting>
     </DXThemeManager>
   </userSettings>
